<resources>
    <string name="app_name">Kitchen Sink</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="splash_screen">Splash Screen (GSON &amp; YQL)</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="welcome_message">Welcome Message!!</string>
    <string name="logo_desc">app logo</string>
    <string name="title_activity_splash_screen_result">European Countries</string>
    <string name="title">European Countries According to Yahoo:</string>
    <string name="title_activity_reusable_layout">ReusableLayoutActivity</string>
    <string name="reusable_layout">Reusable Layout with merge</string>
    <string name="next_desc">Next</string>
    <string name="prev_desc">Prev</string>
    <string name="title_activity_pull_to_refresh">Refresh Date and Time</string>
    <string name="pull_to_refresh">Pull/Swipe To Refresh</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="navigation_drawer">Navigation Drawer (Material Design)</string>
    <string name="volley"><![CDATA[Volley & Best Buy API]]></string>
    <string-array name="navigation_drawer_options">
        <item>Selection 1</item>
        <item>Selection 2</item>
        <item>Selection 3</item>
    </string-array>
</resources>