<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/splash_screen"
        android:id="@+id/splash_screen_button"
        android:layout_gravity="center_horizontal"
        android:onClick="showSplashScreenActivity"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reusable_layout"
        android:id="@+id/reusable_layout_button"
        android:layout_gravity="center_horizontal"
        android:onClick="showReusableLayoutActivity"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pull_to_refresh"
        android:id="@+id/pull_to_refresh_button"
        android:layout_gravity="center_horizontal"
        android:onClick="showPullToRefreshActivity"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/navigation_drawer"
        android:id="@+id/navigation_drawer_button"
        android:layout_gravity="center_horizontal"
        android:onClick="showNavigationDrawerActivity"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/volley"
        android:id="@+id/volley_button"
        android:layout_gravity="center_horizontal"
        android:onClick="showVolleyActivity" />
</LinearLayout>
